--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-to-pdfmake": "^2.4.22",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
+    "ngx-clipboard": "^16.0.0",
     "ngx-echarts": "^15.0.3",
     "ngx-mask": "^15.1.1",
     "pdfmake": "^0.2.7",
